<resources>
    <string name="app_name">Gestor De Entrenamiento</string>
    <string name="addRoutineButton">Añadir</string>
    <string name="addRoutineInput">Título de tu rutina</string>
    <string name="routinesTextView">Rutinas</string>
    <string name="InputEjercicio">Nombre del Ejercicio</string>
    <string name="InputSeries">Series</string>
    <string name="InputRep">Repeticiones</string>
    <string name="addExerciseButton">Añadir</string>
    <string name="ToastNombreEj">Por favor, ingresa un nombre de ejercicio</string>
    <string name="ToastRep">Por favor, ingresa numero repeticiones</string>
    <string name="ToastSerie">Por favor, ingresa numero series</string>
    <string name="ToastEjAñadido">Ejercicio añadido con éxito</string>
    <string name="Ejercicio">Ejercicio</string>
    <string name="Series">Series</string>
    <string name="Repeticiones">Repeticiones</string>
    <string name="RutinaAñadida">Rutina añadida con éxito</string>
    <string name="ToastRutinaNombre">Por favor, ingresa un título de rutina</string>
    <string name="NombreSesion">Nombre de la sesion</string>
</resources>