<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@android:drawable/divider_horizontal_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ejercicio"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/seriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Series"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/repeticionesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Repeticiones"
        android:textSize="16sp" />

</LinearLayout>
